--- a/apex-mdapi/src/package.xml
+++ b/apex-mdapi/src/package.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>GenericDAO</members>
+        <members>PaginatedDAO</members>
         <members>PaginatedController</members>
         <name>ApexClass</name>
     </types>
     <types>
-        <members>manageSO</members>
+        <members>paginatedComponent</members>
         <name>LightningComponentBundle</name>
     </types>
     <version>54.0</version>
